[tool.poetry]
name = "ansible-python_deploy-test_poetry"
version = "1.0"
description = "Simple webserver"
authors = ["Maciej Rybak <maciej.rybak1@wp.pl>"]

[tool.poetry.dependencies]
python = "^3.7"
bottle = "0.12.19"
gunicorn = "20.0.4"
setproctitle = "1.2.2"

[tool.poetry.dev-dependencies]
black = "20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
